"Fixed" backgrounds on mobile

--- a/source/assets/styles/pages/index/_features_section.scss
+++ b/source/assets/styles/pages/index/_features_section.scss
@@ -8,6 +8,7 @@ $border-radius-features: 12px;
 
   @media (max-width: 460px) {
     background-image: url('../images/features-bg-mobile.jpg');
+    background-attachment: fixed;
   }
 
   .features-slider {
