--- a/source/assets/styles/pages/index/_hero.scss
+++ b/source/assets/styles/pages/index/_hero.scss
@@ -2,8 +2,13 @@
   background: url('../images/hero-bg.jpg')  center center / cover;
   z-index: 1;
 
-  @media (max-width: 460px) {
+  @media (max-width: 960px) {
+    background-attachment: fixed;
+  }
+
+  @media (max-width: 700px) {
     background-image: url('../images/hero-bg-mobile.jpg');
+    background-attachment: fixed;
   }
 
   > .container {
